@@ -2,6 +2,7 @@
 v2.0.5-git
 ----------
 
+[jan] Add unit tests for Oracle.
 
 
 ------
